use commons-codec instead of sun.misc.BASE64Decoder/BASE64Encoder